...
    "missingError": "加载问题。我们无法正确地加载部分数据。",
    "preferNotToSay": "不想说",
    "allCounties": "纽约所有的县",
    "confirmChanges": "确认更改",
    "changesUpdated": "更改设置已更新",
    "dismiss": "消除",
    "placeholder": "选择......",
    "ok": {
      "label": "确定",
      "hint": "关闭弹出窗口"
    },
    "tryAgain": {
      "title": "请重试",
...
    "settingsContactTracing": "我的COVID警示",
    "settingsCheckin": "COVID签入设置",
    "dataPolicy": "数据保护政策",
    "terms": "条款及细则",
    "metrics": "应用指标设置",
    "leave": "退出纽约COVID智能库",
    "contactTracing": "接触追踪",
    "positiveResult": "如果您的COVID-19检测结果呈阳性",
    "settingsLanguage": "我的语言",
    "howItWorks": "工作原理",
    "submitFeeback": "提交反馈"
  },
  "navbar": {
...
    "80+": "超过80岁"
  },
  "phoneNumber": {
    "code": {
      "label": "您所在的国家代码",
      "placeholder": "国家",
      "searchPlaceholder": "搜索国家",
      "noResults": "本次搜索无结果。\n请尝试其他关键字。",
      "error": {
        "required": "您需填写国家代码。"
      }
    },
    "number": {
...
