...
  );

  return (
    <Scrollable
      toast={errorToast}
      heading={t('yourData:title')}
      testID="your-data">
      <Markdown markdownStyles={{block: {marginBottom: 16}}}>
        {t('yourData:info')}
      </Markdown>
      <Spacing s={8} />
      <DataProtectionLink />
      <Spacing s={12} />
...
